[package]
name = "tx_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.32",features = ["derive"]}
crossterm = "0.28.1"
ethers = "2.0.14"
petgraph = "0.7.1"
reqwest = {version = "0.12.14",features = ["json"]}
serde = {version = "1.0.219" ,features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1",features = ["full"]}
tui = "0.19.0"
