[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
ethers = "2.0.14"
hex = "0.4.3"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
web3 = "0.19.0"
